# anush-09.github.io

./: README.md  _quarto.yml  index.qmd  pyproject.toml
.quarto/idx/: index.qmd.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: INDEX
_site/: about.html  index.html
