[project]
name = "anush-09-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Anu Sharma",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "anush_09"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
